<?xml version="1.0"?>
<package format="3">
  <name>fendt_ackermann_controller</name>
  <version>0.0.1</version>
  <description>ROS 2 control plugin that converts /cmd_vel into Fendt steering and rear wheel commands.</description>
  <maintainer email="evomrd@todo.todo">evomrd</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/fendt_ackermann_controller_plugins.xml"/>
  </export>
</package>

