<?xml version="1.0"?>
<package format="3">
  <name>komatsu_cartographer</name>
  <version>0.0.1</version>
  <description>Cartographer launch and config for Komatsu Gazebo mapping tests.</description>

  <maintainer email="mehmetcopur_01@outlook.com">evomrx22</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

